[WIP] Some improvements on the shopping cart

--- a/Practica3/TODO.txt
+++ b/Practica3/TODO.txt
@@ -2,3 +2,5 @@
 - Cambiar imagenes para que haya tres o cuatro distintas
 - Mostrar productos en vez de movies
 - Cuadrar texto dentro de casillas en pantalla principal
+- Arreglar PK orders no se autoincrementa bien (Al loggearse con un usuario que no tenga carrito aun)
+- Probar que el carrito funciona bien añadiendo, eliminando, con los botones, con el textfield, y al logearnos
